syntax = "proto3";

package proto;
option go_package = "github.com/isard-vdi/isard/hyper/pkg/proto";

service Hyper {
    rpc DesktopStart(DesktopStartRequest) returns (DesktopStartResponse) {}
    rpc DesktopStop(DesktopStopRequest) returns (DesktopStopResponse) {}
    rpc DesktopResume(DesktopResumeRequest) returns (DesktopResumeResponse) {}
    rpc DesktopSuspend(DesktopSuspendRequest) returns (DesktopSuspendResponse) {}
    rpc DesktopSave(DesktopSaveRequest) returns (DesktopSaveResponse) {}
    rpc DesktopRestore(DesktopRestoreRequest) returns (DesktopRestoreResponse) {}
    rpc DesktopList(DesktopListRequest) returns (DesktopListResponse) {}
    rpc DesktopXMLGet(DesktopXMLGetRequest) returns (DesktopXMLGetResponse) {}
    rpc DesktopMigrateLive(DesktopMigrateLiveRequest) returns (DesktopMigrateLiveResponse) {}
    rpc DesktopScreenshot(DesktopScreenshotRequest) returns (DesktopScreenshotResponse) {}
}

message DesktopStartRequest {
    string xml = 1;
}

message DesktopStartResponse {
    string xml = 1;
}

message DesktopStopRequest {
    string id = 1;
}

message DesktopStopResponse {}

message DesktopListRequest {}

message DesktopListResponse {
    repeated string ids = 1;
}

message DesktopXMLGetRequest {
    string id = 1;
}

message DesktopXMLGetResponse {
    string xml = 1;
}

message DesktopMigrateLiveRequest {
    string id = 1;
    string hypervisor = 2;
    uint64 bandwidth =3;
}

message DesktopMigrateLiveResponse {}

message DesktopScreenshotRequest {
    string id = 1;
}

message DesktopScreenshotResponse {
    string screen = 1;
}

message DesktopResumeRequest {
    string id = 1;
}

message DesktopResumeResponse {}

message DesktopSuspendRequest {
    string id = 1;
}

message DesktopSuspendResponse {}

message DesktopRestoreRequest {
    string savepath = 1;
}

message DesktopRestoreResponse {}

message DesktopSaveRequest {
    string id = 1;
    string savepath = 2;
}

message DesktopSaveResponse {}